syntax="proto2";

message PeerRequest {
  required uint32 type = 1;
  optional uint32 port = 2;
  optional bytes localAddress = 3;
}

message PeerResponse {
  optional bytes peers = 1;
  optional bytes localPeers = 2;
}
