syntax="proto2";

message RpcRequest {
  required string command = 1;
  optional bytes id = 2;
  optional bytes target = 3;
  optional bytes forwardRequest = 4;
  optional bytes forwardResponse = 5;
  optional bytes roundtripToken = 6;
  optional bytes value = 7;
}

message RpcResponse {
  optional bytes id = 1;
  optional bytes nodes = 2;
  optional bytes value = 3;
  optional bytes roundtripToken = 4;
}
